<resources>
    <string name="app_name">Joule</string>
    <string name="version">client</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="sign_in_prompt">Already have an account? Sign In</string>
    <string name="sign_up_prompt">New Here? Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>